--- a/project/package.json
+++ b/project/package.json
@@ -11,21 +11,24 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.17.1",
+    "@supabase/supabase-js": "^2.39.7",
     "@tensorflow/tfjs": "^4.17.0",
     "@vladmandic/face-api": "^1.7.13",
+    "framer-motion": "^11.1.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
     "react-speech-recognition": "^3.10.0",
     "react-webcam": "^7.2.0",
-    "framer-motion": "^11.1.8"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/react-speech-recognition": "^3.9.5",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
